Add postgresql DB. Initial connection in python to DB

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,27 @@ services:
   command: uvicorn main:app --host 0.0.0.0 --port 8000
   ports:
     - "8000:8000"
+  depends_on:
+    - "database_postgres"
   restart: always
  app_frontend:
   build: ./frontend
   container_name: app_frontend
-  # command: nginx
   ports:
     - "80:80"
   depends_on:
     - "app_backend"
   restart: always
+ database:
+  image: postgres
+  container_name: database_postgres
+  ports:
+    - "5432:5432"
+  volumes:
+    - pgdata:/var/lib/postgresql/data
+  environment:
+    - POSTGRES_USER=postgres
+    - POSTGRES_PASSWORD=postgres
+    - POSTGRES_DB=prisma
+volumes:
+  pgdata:
